Fixed bug #42203 (Clear SQLite result sets before closing database.)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@254556 c90b9560-bf6c-de11-be94-00142212c4b1